[project]
name = "stock-price-prediction-using-rnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "keras-tuner>=1.4.7",
    "keras>=3.7.0",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
build = [
    "tensorflow",
]
